--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -38,7 +38,7 @@
 
 @media (min-width:1200px) {
     .container {
-        width: 1200px
+        width: 70%
     }
     .mobile-menu-area {
         display: none;
