change width class container

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,9 +149,10 @@ label {
   background: #4fc1f0 none repeat scroll 0 0;
   color: #ffffff;
 }
-
-.container {
-  width: 100%;
+@media (min-width: 1200px) {
+    .container {
+        width: 100%;
+    }
 }
 
 .expert-section {
