--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,6 +501,9 @@ label {
   font-weight: 700;
   padding-left: 5px;
 }
+.expert-menu li > ul > li a{
+    color: black;
+}
 .expert-menu li > ul > li a > i {
   padding: 0;
   color: #EE9209;
