--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -3,7 +3,8 @@ body {
     font-size: 0.875em;
     overflow-x: hidden;
     color: #222;
-    font-family: "Poppins", sans-serif;
+    font: 16px 'Open Sans', serif;
+    line-height: 1.6;
     background-attachment: fixed;
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 20%, transparent 20%, transparent 40%, rgba(255, 255, 255, 0.15) 40%, rgba(255, 255, 255, 0.15) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.15) 80%, transparent);
 }
