--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ h6 {
   color: #3b3b42;
   font-family:  "Open Sans", sans-serif;
   font-style: normal;
-  /*font-weight: 600;*/
+  font-weight: 700;
   margin-top: 0;
   text-transform: capitalize;
 }
