--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 
 body {
-  font-family: 'Muli', Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 14px;
+    font-family:  "Open Sans", sans-serif;
+    font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
