add blog detail

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -451,7 +451,7 @@
     }
     .expert-section {
         padding: 80px 0;
-        overflow: hidden;
+        /* overflow: hidden; */
     }
     .logo-wrapper img {
         width: 100%;
