--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,7 +151,7 @@ label {
 
 .expert-section {
   padding: 100px 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .gray-bg {
@@ -2032,14 +2032,11 @@ div.g-recaptcha {
 }
 
 .comment-title {
-  font-family: 'Montserrat', sans-serif;
-  display: inline-block;
   border-bottom: 1px solid #e5e5e5;
-  font-size: 20px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  margin-bottom: 25px;
-  padding-bottom: 8px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 25px;
+    padding-bottom: 8px;
 }
 
 .media-list li {
