--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2553,3 +2553,9 @@ post
     background-color: white;
     padding: 20px;
 }
+.shadow-sm {
+    box-shadow: 0 .5rem .5rem rgba(0,0,0,.075)!important;
+}
+.rounded {
+    border-radius: 1rem!important;
+}
