--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -50,6 +50,7 @@
   Old Desktop
 ---------------------------------------------------*/
 
+
 @media (min-width: 992px) and (max-width: 1169px) {
     .container {
         width: 90%
@@ -459,8 +460,11 @@
 ---------------------------------------------------*/
 
 @media (max-width: 767px) {
+    .content .expert-blog-section {
+        padding:0px;
+    }
     .content .expert-blog-section .container{
-        width: 80%;
+        width: 100%;
     }
     .expert-section {
         padding: 80px 0;
@@ -929,3 +933,8 @@
     }
 }
 
+@media (min-width: 992px) and (max-width: 1247px) {
+    .main-header-area.sticky-header {
+        height: 120px;
+    }
+}
