--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -467,8 +467,8 @@
         width: 98%;
     }
     .content .expert-blog-section .container article{
-        padding-left: 15px;
-        padding-right: 15px;
+        /*padding-left: 15px;*/
+        /*padding-right: 15px;*/
     }
     .expert-section {
         padding: 80px 0;
